[gd_scene load_steps=10 format=3 uid="uid://bdc07kwcxglgb"]

[ext_resource type="Script" uid="uid://d2pq8ujyawoqk" path="res://mario/mario_pause_menu.gd" id="1_muu6i"]
[ext_resource type="FontFile" uid="uid://c25d003g01x4h" path="res://mario/Mario64.ttf" id="1_mvtme"]
[ext_resource type="AudioStream" uid="uid://vuyuw4rpqy3a" path="res://mario/sfx/sm64_pause.wav" id="2_28vdd"]

[sub_resource type="LabelSettings" id="LabelSettings_s8vbx"]
font = ExtResource("1_mvtme")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_5f5i0"]
font = ExtResource("1_mvtme")
font_size = 24
font_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dear8"]
font = ExtResource("1_mvtme")
font_size = 24
font_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m44o7"]
font = ExtResource("1_mvtme")
font_size = 24
font_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vc0ji"]
font = ExtResource("1_mvtme")
font_size = 24
font_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6w4g4"]
font = ExtResource("1_mvtme")
font_size = 24

[node name="Control" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_muu6i")

[node name="RestartRequest" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.97
anchor_right = 0.022
anchor_bottom = 0.97
offset_left = -0.716003
offset_top = -27.92
offset_right = 401.284
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 0
text = "* Some changed settings require a restart."
label_settings = SubResource("LabelSettings_s8vbx")
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_28vdd")
volume_db = -10.0
autoplay = true

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.312
anchor_top = 0.333
anchor_right = 0.687
anchor_bottom = 0.667
offset_left = 0.639984
offset_top = -119.76
offset_right = 0.640015
offset_bottom = -10.24
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="Control" type="Control" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.071
anchor_right = 1.0
anchor_bottom = 0.925
offset_top = -0.0400009
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ResumeLabel" type="Label" parent="Control/LabelContainer"]
layout_mode = 2
text = "Resume"
label_settings = SubResource("LabelSettings_5f5i0")
horizontal_alignment = 1

[node name="ViewStageLabel" type="Label" parent="Control/LabelContainer"]
layout_mode = 2
text = "View Level"
label_settings = SubResource("LabelSettings_dear8")
horizontal_alignment = 1

[node name="SettingsLabel" type="Label" parent="Control/LabelContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_m44o7")
horizontal_alignment = 1

[node name="ExitLabel" type="Label" parent="Control/LabelContainer"]
layout_mode = 2
text = "Exit"
label_settings = SubResource("LabelSettings_vc0ji")
horizontal_alignment = 1

[node name="StatDisplay" type="Control" parent="Control"]
layout_mode = 1
anchor_top = 0.895
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.186249
offset_bottom = 0.222076
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/StatDisplay"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="StarCounter" type="Label" parent="Control/StatDisplay/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "* x 47"
label_settings = SubResource("LabelSettings_6w4g4")

[node name="CoinCounter" type="Label" parent="Control/StatDisplay/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "$ x 5,493"
label_settings = SubResource("LabelSettings_6w4g4")
